# python

./: pyproject.toml
python/script/: 2_1_matplotlib_Exercises.ipynb  4_1_Python_Essentials_Exercises (1).ipynb  crime_homework.ipynb  crime_homework1.ipynb  my_notebook.ipynb  numpy excerise.ipynb  project.ipynb  t3.py  test2.py  testing.py
script/: config.yaml  project.ipynb  tayo-explanation.ipynb
