[tool.poetry]
name = "python-tutorial"
version = "0.1.0"
description = ""
authors = ["David <davidodaudu10@gmail.com>"]
readme = "README.md"
packages = [{include = "python_tutorial"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
ipykernel = "^6.17.1"
jupyter = "^1.0.0"
click = "^8.1.3"
requests = "^2.28.1"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
